# agentic-mcp-hackathon

./: .gitignore  Makefile  README.md  agents.typ  compile.sh  compile_notebooks.sh  requirements.txt
.devcontainer/: devcontainer.json
exercises/: 01_chatbot.ipynb  01_chatbot.py  02_rag.ipynb  02_rag.py  03_tool_calling.ipynb  03_tool_calling.py  04_react.ipynb  04_react.py  05_mcp.ipynb  05_mcp.py  05_web_automation.ipynb  05_web_automation.py  06_code_execution.ipynb  06_code_execution.py  06_image_understanding.ipynb  07_coding_agent.ipynb  07_deep_agent.ipynb  07_deep_agent.py  07_image_understanding.ipynb  08_coding_agent.ipynb  08_image_understanding.ipynb  08_reflexion.ipynb  08_reflexion.py  09_gaia_reflexion.ipynb  09_gaia_reflexion.py  compile.sh  llm.py  pyproject.toml  remove_solutions.sh  solve_exercises.sh
exercises/.solutions/: 01_chatbot.py  02_rag.py  03_tool_calling.py  04_react.py  05_mcp.py  08_reflexion.py
exercises/lab_01_deep_research/: README.md  pyproject.toml  remove_solutions.sh  solve_exercises.sh  test_react_temp.py  test_simple_agent_temp.py
exercises/lab_01_deep_research/.solutions/: react_agent.py
exercises/lab_01_deep_research/.solutions/mas/: graph.py  nodes.py  state.py
exercises/lab_01_deep_research/.solutions/react/: nodes.py  state.py
exercises/lab_01_deep_research/.solutions/simple_agent/: graph.py  nodes.py  state.py
exercises/lab_01_deep_research/solutions/: graph.py  main.py  nodes.py  state.py  tools.py
exercises/lab_01_deep_research/solutions/mas/: graph.py  nodes.py  state.py
exercises/lab_01_deep_research/src/deep_research/: graph.py  main.py  nodes.py  react_agent.py  state.py  streamlit_app.py  tools.py  ui.py
exercises/lab_01_deep_research/src/deep_research/mas/: graph.py  nodes.py  state.py
exercises/lab_01_deep_research/src/deep_research/react/: graph.py
exercises/lab_01_deep_research/src/deep_research/simple_agent/: tools.py
exercises/lab_01_deep_research/tests/: debug_gaia_failure.py  test_comparison.py  test_gaia.py  test_gaia_official.py  verify_solutions.py
exercises/lab_01_research_agent/: app.py  requirements.txt
exercises/lab_01_research_agent_react/: app.py  requirements.txt
exercises/lab_02_mcp_advanced/: README.md  pyproject.toml  remove_solutions.sh  solve_exercises.sh
exercises/lab_02_mcp_advanced/.solutions/coding_agent/: agent.py
exercises/lab_02_mcp_advanced/.solutions/deep_agent/: graph.py
exercises/lab_02_mcp_advanced/data/deep_agent_sandbox/: game.js  index.html  style.css
exercises/lab_02_mcp_advanced/src/: main.py  mcp_server_docker.py  solution_supervisor.py
exercises/lab_02_mcp_advanced/src/mcp_agent/coding_agent/: main.py
exercises/lab_02_mcp_advanced/src/mcp_agent/deep_agent/: coding_subagent.py  fs_tools.py  main.py  state.py  subagent.py  todo_tools.py
exercises/lab_02_mcp_advanced/src/mcp_agent/server/: docker_server.py
exercises/lab_02_mcp_advanced/src/mcp_agent/tools/: web_search.py
exercises/lab_02_mcp_advanced/src/tools/: web_search.py
exercises/lab_02_mcp_advanced/tests/: test_coding_agent.py  test_gaia.py  test_snake_game.py
exercises/src/: 01_chatbot.py  02_rag.py  03_tool_calling.py  04_react.py  05_mcp.py  06_code_execution.py  07_coding_agent.py  07_image_understanding.py  08_coding_agent.py  08_image_understanding.py
labs/: compile.sh  create_gaia.py  gaia_validation_level1.csv  lab_01_deep_research.ipynb  lab_01_deep_research.py  lab_01_eval_gaia.ipynb  lab_01_react.ipynb  lab_02_advanced.ipynb  llm.py
labs/src/: lab_01_deep_research.py  lab_01_eval_gaia.py  lab_01_react.py  lab_02_advanced.py
src/: agentic_design_patterns.typ  agents.typ  intro.typ  llm_basics.typ  logic.typ  main.typ  mcp.typ  theme.typ  toolbox.typ
