[project]
name = "exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "marimo>=0.18.4",
    "mcp>=1.25.0",
    "pandas>=2.3.3",
    "smolagents>=1.23.0",
    "pymupdf>=1.25.0",
    "ddgs>=9.10.0",
    "helium>=3.2.0",
    "webdriver-manager>=4.0.0",
]

[tool.pyrefly]

[tool.uv.workspace]
members = [
    "mcp/app-templates/my-mcp-hello-world",
]

[dependency-groups]
dev = [
    "jupytext>=1.18.1",
]

