[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "pandas>=3.0.0",
    "pymupdf>=1.26.7",
    "scikit-learn>=1.8.0",
    "smolagents>=1.24.0",
]
