[project]
name = "lab-02-mcp-advanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "markdownify>=1.2.2",
    "mcp>=1.25.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[tool.pyrefly]

